<resources>
    <string name="app_name">Ministagram</string>
    <string name="error_sign_in"><u>Email or password is wrong!</u></string>
    <string name="label_no_account">You don’t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="user_name">User Name</string>
    <string name="error_sign_up">User name, email or password is wrong!</string>
    <string name="timeline">Timeline</string>
    <string name="friends">Friends</string>
    <string name="user">User</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="post">Post</string>
    <string name="sign_out">Sign out</string>
    <string name="permission_never_ask">Go to setting and allow permission</string>
    <string name="permission_denied">Permission is required</string>
    <string name="permission_setting">Please go to setting and allow the permission.</string>
    <string name="button_setting">Setting</string>
    <string name="button_cancel">Cancel</string>
    <string name="send">Send</string>
</resources>
